# corewlan-rs

./: .gitignore  CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_smoke.rs  02_wifi_client_events.rs  03_interface_snapshot.rs  04_channel_snapshot.rs  05_network_snapshot.rs  06_configuration_snapshot.rs  07_mutable_configuration.rs  08_network_profile_snapshot.rs  09_mutable_network_profile.rs  10_security_types.rs
src/: channel.rs  client.rs  configuration.rs  error.rs  interface.rs  lib.rs  mutable_configuration.rs  mutable_network_profile.rs  network.rs  network_profile.rs  object.rs  profile.rs  security.rs  types.rs
src/ffi/: channel.rs  client.rs  configuration.rs  core.rs  corewlan_shim.m  interface.rs  mod.rs  mutable_configuration.rs  mutable_network_profile.rs  network.rs  network_profile.rs  security.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CoreWLANBridge/: CWChannel.swift  CWConfiguration.swift  CWInterface.swift  CWMutableConfiguration.swift  CWMutableNetworkProfile.swift  CWNetwork.swift  CWNetworkProfile.swift  CWSecurity.swift  CWWiFiClient.swift  Core.swift
tests/: channel_tests.rs  configuration_tests.rs  interface_tests.rs  mutable_configuration_tests.rs  mutable_network_profile_tests.rs  network_profile_tests.rs  network_tests.rs  security_tests.rs  wifi_client_tests.rs
tests/common/: mod.rs
