[package]
name = "corewlan"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/corewlan-rs"
repository = "https://github.com/doom-fish/corewlan-rs"
description = "Safe Rust bindings for Apple's CoreWLAN framework — inspect Wi-Fi interfaces, scan results, and preferred network state on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["wifi", "wlan", "corewlan", "macos", "networking"]
categories = ["api-bindings", "os::macos-apis", "network-programming"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "corewlan"
crate-type = ["lib"]

[build-dependencies]
cc = "1"

[dependencies]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_smoke"

[profile.release]
debug = "full"
strip = "none"
